# lost-metrics-simulator

./: Cargo.toml  README.md
src/: lib.rs  simulator.rs
src/models/: encounter_template.rs  formatted_value.rs  game.rs  misc.rs  mod.rs  simulator.rs
src/services/: fake_database.rs  fake_encounter.rs  mod.rs  uwuowo_api.rs
src/simulator/: builder.rs  emitter.rs  event.rs  identity.rs  mod.rs  simulator.rs  utils.rs
src/templates/: debuffs.rs  mod.rs  raids.rs  skill.rs  skill_buff.rs  specialisation.rs
src/types/: class.rs  mod.rs  simulator.rs  skill.rs  specialisation.rs
src/utils/: mod.rs
