[package]
name = "lost-metrics-simulator"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
bincode = "2.0.1"
uuid = { version = "1.15.1", features = ["v4"] }
chrono = "0.4.31"
anyhow = "1.0.97"
tokio = { version = "1.44.0", features = ["rt", "macros", "time", "rt-multi-thread"] }
log = "0.4.26"
flexi_logger = "0.29.8"
lost-metrics-core = { path= "../lost-metrics-core" }
lost-metrics-data = { path= "../lost-metrics-data" }
lost-metrics-sniffer-stub = { path= "../lost-metrics-sniffer-stub" }
lost-metrics-misc = { path= "../lost-metrics-misc" }
rand = "0.9.0"

[dev-dependencies]
mockall = "0.13.1"