[package]
name = "lost-metrics-simulator"
version = "0.1.0"
authors = ["averageeucplayer"]
edition = "2024"
rust-version = "1.85"

[dependencies]
bincode = "2.0.1"
chrono = "0.4.31"
anyhow = "1.0.97"
log = "0.4.26"
thiserror = "2.0.12"
semver = { version = "1.0.26", features = ["serde"] }
humantime-serde = "1.1.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_with = "3.5.1"
serde_json = "1"
rand = "0.9.0"
uuid = { version = "1", features = ["v7", "serde"] }
lost-metrics-misc = { path= "../lost-metrics-misc" }
lost-metrics-core = { path= "../lost-metrics-core" }

[dev-dependencies]
mockall = "0.13.1"